<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserFragment.privacyPolicyFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/custom_gradientbg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibBack"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:contentDescription="goBack"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.81"
                app:srcCompat="@drawable/ic_arrow_left" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView6"
            app:srcCompat="@drawable/icon_bgfoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="35dp"
            android:paddingTop="10dp"
            android:paddingEnd="35dp"
            android:paddingBottom="10dp" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/frameLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="Privacy Policy"
                    android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                    android:textSize="@dimen/m3_sys_shape_corner_value_extra_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        app:srcCompat="@drawable/ic_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:tint="#878787" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter"
                        android:paddingStart="3dp"
                        android:text="Last Update: 11 January 2025"
                        android:textColor="#878787"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter"
                android:text="@string/privacypolicy"
                android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_semibold"
                android:text="1. Collection and Use of Data"
                android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:padding="3dp"
                android:text="@string/useofdata"
                android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/md_theme_outlineVariant_mediumContrast" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_semibold"
                android:text="2. Data Security and Protection"
                android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:padding="3dp"
                android:text="@string/protection"
                android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/md_theme_outlineVariant_mediumContrast" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_semibold"
                android:text="3. Transparency and User Rights"
                android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:padding="3dp"
                android:text="@string/rights"
                android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/md_theme_outlineVariant_mediumContrast" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_semibold"
                android:text="4. Service System Limitations"
                android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:paddingTop="3dp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:paddingBottom="30dp"
                android:text="@string/limitations"
                android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>