<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        style="@style/Widget.Material3.BottomSheet.Modal"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter_semibold"
                            android:paddingTop="20dp"
                            android:text="Terms &amp; Conditions"
                            android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                            android:textSize="@dimen/m3_sys_shape_corner_value_extra_large" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="3dp">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_update" />

                        <TextView
                            android:id="@+id/textView25"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:paddingStart="5dp"
                            android:text="Last Update: 11 January 2025"
                            android:textColor="#878787"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/terms"
                    android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="1. Account Registration and Responsibilities"
                    android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="3dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/responsibilites"
                    android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/md_theme_outlineVariant_mediumContrast" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="2. Use of Pellets and Payment Policy"
                    android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="3dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/paymentpolicy"
                    android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/divider6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/md_theme_outlineVariant_mediumContrast" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="3. App Access and Limitations"
                    android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="3dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/appaccess"
                    android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/divider7"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/md_theme_outlineVariant_mediumContrast" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="4. Feedback and Community Conduct"
                    android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="3dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/conduct"
                    android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/md_theme_outlineVariant_mediumContrast" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="40dp">

                    <Button
                        style="?attr/materialButtonOutlinedStyle"
                        android:id="@+id/btnDecline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/md_theme_primary"
                        android:text="Decline" />

                    <Button
                        android:id="@+id/btnAgree"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="@color/md_theme_primary"
                        android:text="Agree"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>